fix modal overflow styles

--- a/src/core/molecules/modal/modal.scss
+++ b/src/core/molecules/modal/modal.scss
@@ -47,7 +47,7 @@ $modal-padding: $rem-200;
     backdrop-filter: blur(8px) contrast(0.9);
     z-index: $z-index-modal;
     overflow-x: hidden;
-    overflow-y: scroll;
+    overflow-y: auto;
     top: 0;
     right: 0;
     left: 0;
